--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -10,28 +10,6 @@
     <script src="/vendor/gibber.lib.min.js"></script>
     <script src="/vendor/Pizzicato.min.js"></script>
 </head>
-  <body>
-      <script id="shader-film-grain-2" type="shader">
-            uniform float time;
-            uniform sampler2D uSampler;
-            varying vec2 vTextureCoord;
-
-            void main(){
-                vec4 color = texture2D(uSampler, vTextureCoord);                
-                float strength = 8.0;
-                float x = (vTextureCoord.x + 4.0 ) * (vTextureCoord.y + 4.0 ) * (time * 10.0);
-                vec4 grain = vec4(mod((mod(x, 13.0) + 1.0) * (mod(x, 123.0) + 1.0), 0.01)-0.005) * strength;
-                
-                if(vTextureCoord.x > 0.5)
-                {
-                    grain = 1.0 - grain;
-                    gl_FragColor = color * grain;
-                }
-                else
-                {
-                    gl_FragColor = color + grain;
-                }
-             }                                                                             
-      </script>
+  <body bgcolor="black">
   </body>
 </html>
