wip: samples, client refactoring

--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -11,5 +11,20 @@
     <script src="/vendor/Pizzicato.min.js"></script>
 </head>
   <body bgcolor="black">
-  </body>
+      <div id="still"></div>
+      <style>
+        #still {
+          width: 900px;
+          height: 600px;
+          background-color: #000;
+          display: block;
+          position: absolute;
+          left: 512px;
+          top: 140px;
+
+          background-size: cover;
+          background-position: top;
+        }
+      </style>
+    </body>
 </html>
