--- a/src/client/index.ejs
+++ b/src/client/index.ejs
@@ -11,19 +11,35 @@
     <script src="/vendor/Pizzicato.min.js"></script>
 </head>
   <body bgcolor="black">
-      <div id="still"></div>
+      <div id="container-still">
+        <div id="still"></div>
+      </div>     
       <style>
+        #container-still {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          width: 100vw;
+          height: 100vh;
+        }
         #still {
           width: 900px;
           height: 600px;
-          background-color: #000;
           display: block;
-          position: absolute;
-          left: 512px;
-          top: 140px;
+
+          /* For testing */
+          /* background-color: #fff; */
+          /* For prod */
+          background-color: #000;
+
 
           background-size: cover;
           background-position: top;
+
+          border-radius: 5%;
         }
       </style>
     </body>
